tests: Replace junit/hamcrest with assertj
Replace junit/hamcrest assertions with assertj
for all modules except for `:server:`.